# Algo-Notes

./: .gitignore  CMakeLists.txt  README.md
include/: bst.hpp  red-black-tree.cpp
src/: box.cpp  pca.py  rect.cpp  test.cpp
string/: api.cpp
test/: test.cpp
tree/: heap.cpp  morris.cpp  pat.cpp  seg.cpp  trie.cpp  ufs.cpp
