project(Algo-Notes)
cmake_minimum_required(VERSION 3.19)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(OpenCV REQUIRED)
set(absl_DIR "C:/Users/mix/vcpkg/installed/x86-windows/share/absl")
find_package(absl REQUIRED)
include_directories(
    /usr/local/include
    include
)
set(FOLDERS string src tree)
foreach (FOLDER ${FOLDERS})
    file(GLOB NOTES ${FOLDER}/*.cpp)
    foreach(FILEPATH ${NOTES} )
        string(REGEX REPLACE ".+/(.+)\\..*" "\\1" BASENAME ${FILEPATH})
        message(${BASENAME})
        add_executable(${BASENAME} ${FILEPATH})
        target_link_libraries(${BASENAME} absl::time ${OpenCV_LIBS})
    endforeach( )
endforeach( )

set(TESTFOLDERS test)
foreach (FOLDER ${TESTFOLDERS})
    file(GLOB NOTES ${FOLDER}/*.cpp)
    foreach(FILEPATH ${NOTES} )
        string(REGEX REPLACE ".+/(.+)\\..*" "\\1" BASENAME ${FILEPATH})
        message(${BASENAME})
        add_executable(test_${BASENAME} ${FILEPATH})
        target_link_libraries(test_${BASENAME} absl::time ${OpenCV_LIBS})
    endforeach( )
endforeach( )
